--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -246,7 +246,7 @@
                             "Description": "Sóc el Junior DevOps de l'equip. M'encarrego del manteniment i actualització de l'aplicació web. Tinc experiència amb cloud computing services, llenguatges de programació i metodologies."
                         },
                         "iker-torres": {
-                            "Description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur auctor urna ac libero pretium, id sagittis augue aliquam. Mauris pulvinar viverra ligula at pellentesque."
+                            "Description": "Sóc l'Iker, el tècnic en xàrxes de l'equip. M'encarrego del manteniment de la xarxa i de la gestió de les còpies de seguretat dels nostres clients."
                         },
                         "juanjo-romero": {
                             "Description": "Activitats dirigides a analitzar, dissenyar, desenvolupar, instal·lar i mantenir programari d'aplicació prenent com a base els requeriments de l'usuari."
