--- a/app/src/i18n/locales/es.json
+++ b/app/src/i18n/locales/es.json
@@ -246,7 +246,7 @@
                             "Description": "Soy el Junior DevOps del equipo. Me encargo del mantenimiento y actualización de la aplicación web. Tengo experiencia con cloud computing services, lenguajes de programación y metodologías."
                         },
                         "iker-torres": {
-                            "Description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur auctor urna ac libero pretium, id sagittis augue aliquam. Mauris pulvinar viverra ligula at pellentesque."
+                            "Description": "Soy Íker, el técnico en redes del equipo. Me encargo del mantenimiento de la red y de la gestión de las copias de seguridad de nuestros clientes."
                         },
                         "juanjo-romero": {
                             "Description": "Actividades dirigidas a analizar, diseñar, desarrollar, instalar y mantener software de aplicación tomando como base los requerimientos del usuario."
