--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -72,7 +72,7 @@
                 "content": {
                     "p1": "Oferim un servei de personalització i distribució de discs i imatges de sistema. És un servei que, inicialment, pot semblar el mateix que ofereixen empreses de consultoria, res més lluny, ja que el nostre servei es caracteritza per la simplicitat i familiaritat d’ús.",
                     "p2": "Per sol·licitar el nostre servei, només us heu de dirigir al nostre portal web on, mitjançant una interfície visual i User friendly (no calen coneixements avançats per fer-la servir), els nostres usuaris poden escollir el software (sistema operatiu, programes d’ús general, drivers que poden necessitar, etc) i el hardware (principalment el tipus de disc: HDD, SSD, M.2, etc).",
-                    "p3": "Les despeses d'enviament sempre corren a càrrect nostre."
+                    "p3": "Les despeses d'enviament sempre corren a càrrec nostre."
                 }
             },
             "serviceSteps": {
